# Dienstenlezer

./: .dockerignore  .gitignore  Dockerfile  README.md  build-exe.bat  compose.yaml  index.html  package-lock.json  package.json  start-app.bat  start-server.bat  stop-server.bat  vite.config.ts
.github/workflows/: publish-ha-image.yml  test.yml
deploy/: Caddyfile.example
deploy/home-assistant/: MIGRATION.md  repository.yaml.template
deploy/home-assistant/addon/: config.yaml.template
public/: sw.js
scripts/: check-ha-addon.mjs  clean-installers.mjs  dev.mjs  package-ha-addon.mjs  sync-ha-repository.mjs  sync-source-repository.mjs
src/: App.tsx  guidanceLogic.test.ts  guidanceLogic.ts  live.test.ts  live.ts  main.tsx  pdfParser.ts  serverUrl.test.ts  serverUrl.ts  storage.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: live.rs  main.rs
