[package]
name = "dienstenlezer"
version = "1.3.3"
description = "Diensten-pdf lezer met webbackend en Qbuzz live status"
authors = ["DienstenLezer"]
edition = "2021"

[features]
default = ["desktop"]
desktop = ["dep:tauri", "dep:tauri-build"]
server = ["dep:axum", "dep:sha2", "dep:tower-http", "dep:tracing", "dep:tracing-subscriber"]

[[bin]]
name = "dienstenlezer"
path = "src/main.rs"
required-features = ["desktop"]

[[bin]]
name = "dienstenlezer-server"
path = "src/bin/dienstenlezer-server.rs"
required-features = ["server"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
axum = { version = "0.8", features = ["multipart"], optional = true }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
futures-util = "0.3"
prost = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", optional = true }
tauri = { version = "2", features = [], optional = true }
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync"] }
tower-http = { version = "0.6", features = ["compression-gzip", "fs", "trace"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
zip = "2.2"
